Started analyse items

--- a/LuckyCharm/Web.config
+++ b/LuckyCharm/Web.config
@@ -75,10 +75,9 @@
   </runtime>
   <entityFramework>
     <contexts>
-      <!--<context type="LuckyCharm.DataAccess.SxResultsContext, LuckyCharm">
+      <context type="LuckyCharm.DataAccess.SxResultsContext, LuckyCharm">
         <databaseInitializer type="LuckyCharm.DataAccess.DBInitializer, LuckyCharm" />
       </context>
-      -->
     </contexts>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
