--- a/LuckyCharm/LuckyCharm.csproj
+++ b/LuckyCharm/LuckyCharm.csproj
@@ -209,6 +209,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Busisness\AnalysisTwoLastNumber.cs" />
     <Compile Include="Busisness\DataFetcher.cs" />
     <Compile Include="Busisness\DataFetcher2.cs" />
     <Compile Include="Busisness\DataFetcherBase.cs" />
@@ -225,16 +226,19 @@
     <Compile Include="Models\AnalysisItem.cs" />
     <Compile Include="Models\DailyResult.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\VirtualAnalysisItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\DailyResults correct data till 14-09-2015.sql" />
     <Content Include="App_Data\Results.mdf" />
     <Content Include="App_Data\Results_log.ldf">
       <DependentUpon>Results.mdf</DependentUpon>
     </Content>
+    <Content Include="App_Data\SQLQuery1.sql" />
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
@@ -273,7 +277,9 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
